--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Điếu cày & thuốc lào chất lượng. Giá tốt, giao nhanh. Đặt hàng & hỗ trợ Zalo.">
   <link rel="icon" href="img/logo.jpg"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap"/>
-  <link rel="stylesheet" href="assets/style.css"/>
+  <link rel="stylesheet" href="style.css"/>
   <style>
     /* Auth modal */
     .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.5);z-index:60}
@@ -182,12 +182,12 @@
 <a class="facebook-fab" href="https://www.facebook.com/dailythuoclao43" aria-label="Facebook" target="_blank" rel="noopener"><img src="img/facebook.png" alt="Facebook"/></a>
 <a class="zalo-fab" href="https://zalo.me/0905695949" aria-label="Chat Zalo" target="_blank" rel="noopener"><img src="img/Zalo_logo.jpg" alt="Zalo"/></a>
 
-<script src="assets/app.js"></script>
+<script src="app.js"></script>
 <div id="toast">Đã thêm vào giỏ hàng</div>
-<script type="module" src="assets/firebase-config.js"></script>
-<script type="module" src="assets/shop.js"></script>
-<script type="module" src="assets/auth.js"></script>
-<script type="module" src="assets/admin.js"></script>
+<script type="module" src="firebase-config.js"></script>
+<script type="module" src="shop.js"></script>
+<script type="module" src="auth.js"></script>
+<script type="module" src="admin.js"></script>
 <script>
   // Tabs in admin
   document.addEventListener('click', (e)=>{
