--- a/checkout.html
+++ b/checkout.html
@@ -6,10 +6,7 @@
   <title>Thanh toán — Tuấn Anh Điếu Cày</title>
   <link rel="icon" href="img/logo.jpg"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap"/>
-  <link rel="stylesheet" href="assets/style.css"/>
-  <script type="module" src="assets/firebase-config.js"></script>
-  <script type="module" src="assets/app-config.js"></script>
-  <script type="module" src="assets/checkout.js"></script>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <header class="header">
@@ -57,5 +54,9 @@
     </div>
   </div></div>
 </section>
+
+<script type="module" src="firebase-config.js"></script>
+<script type="module" src="app-config.js"></script>
+<script type="module" src="checkout.js"></script>
 </body>
 </html>
