--- a/flash-sale.html
+++ b/flash-sale.html
@@ -32,8 +32,8 @@
   </div>
 </section>
 
-<script type="module" src="firebase-config.js"></script>
-<script type="module" src="shop.js"></script>
+<script type="module" src="assets/firebase-config.js"></script>
+<script type="module" src="assets/shop.js"></script>
 <script type="module">
   import { renderFlashSale } from './shop.js';
   renderFlashSale({ container: '#flashList' });
