--- a/checkout.html
+++ b/checkout.html
@@ -55,8 +55,8 @@
   </div></div>
 </section>
 
-<script type="module" src="firebase-config.js"></script>
-<script type="module" src="app-config.js"></script>
-<script type="module" src="checkout.js"></script>
+<script type="module" src="assets/firebase-config.js"></script>
+<script type="module" src="assets/app-config.js"></script>
+<script type="module" src="assets/checkout.js"></script>
 </body>
 </html>
