--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
 
 <script src="app.js"></script>
 <div id="toast">Đã thêm vào giỏ hàng</div>
-<script type="module" src="firebase-config.js"></script>
-<script type="module" src="shop.js"></script>
-<script type="module" src="auth.js"></script>
-<script type="module" src="admin.js"></script>
+<script type="module" src="assets/firebase-config.js"></script>
+<script type="module" src="assets/shop.js"></script>
+<script type="module" src="assets/auth.js"></script>
+<script type="module" src="assets/admin.js"></script>
 <script>
   // Tabs in admin
   document.addEventListener('click', (e)=>{
