--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Điếu cày & thuốc lào chất lượng. Giá tốt, giao nhanh. Đặt hàng & hỗ trợ Zalo.">
   <link rel="icon" href="img/logo.jpg"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="assets/style.css"/>
   <style>
     /* Auth modal */
     .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.5);z-index:60}
