--- a/flash-sale.html
+++ b/flash-sale.html
@@ -6,7 +6,7 @@
   <title>Flash Sale — Tuấn Anh Điếu Cày</title>
   <link rel="icon" href="img/logo.jpg"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
 <header class="header">
