--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a href="flash-sale.html">Flash Sale</a>
     </nav>
     <div class="header__cta">
-      <button class="btn btn--ghost" id="btnAccount">Đăng nhập</button>
+      <button class="btn" id="btnAccount">Đăng nhập</button>
       <span class="badge" id="badgeRole" style="display:none"></span>
       <button class="btn" id="openCart">Giỏ hàng <span class="badge" id="cartCount">0</span></button>
       <a class="btn" href="checkout.html">Đặt hàng</a>
