--- a/checkout.html
+++ b/checkout.html
@@ -13,7 +13,7 @@
   <div class="container header__inner">
     <a class="brand" href="index.html"><img class="brand__logo" src="img/logo.jpg" alt=""/> <span>Tuấn Anh Điếu Cày</span></a>
     <nav class="nav"><a href="index.html#products">Sản phẩm</a><a href="flash-sale.html">Flash Sale</a></nav>
-    <div class="header__cta"><a class="btn btn--ghost" href="index.html">Quay lại</a></div>
+    <div class="header__cta"><a class="btn" href="index.html">Quay lại</a></div>
   </div>
 </header>
 <section class="checkout"><div class="container">
