--- a/checkout.html
+++ b/checkout.html
@@ -21,7 +21,7 @@
   <div class="checkout__wrap">
     <div class="box">
       <h3>Thông tin đơn hàng</h3>
-      <div id="summary"></div>
+      <div><strong>Email:</strong> <span id="meEmail">—</span></div><div><strong>Họ tên:</strong> <span id="meName">—</span></div><div><strong>Số dư ví:</strong> <span id="meBalance">0₫</span></div><hr><div id="summary"></div>
       <div class="total"><span>Tổng cộng:</span><strong id="sumTotal">0₫</strong></div>
     </div>
     <div id="qrBox" class="box" style="display:none">
