--- a/flash-sale.html
+++ b/flash-sale.html
@@ -35,7 +35,7 @@
 <script type="module" src="assets/firebase-config.js"></script>
 <script type="module" src="assets/shop.js"></script>
 <script type="module">
-  import { renderFlashSale } from './shop.js';
+  import { renderFlashSale } from './assets/shop.js';
   renderFlashSale({ container: '#flashList' });
 </script>
 </body>
