--- a/flash-sale.html
+++ b/flash-sale.html
@@ -2,6 +2,11 @@
 <html lang="vi">
 <head>
   <meta charset="utf-8"/>
+  <!-- Viewport chuẩn iOS, cho phép zoom của người dùng -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <!-- (tuỳ chọn) Trải nghiệm web-app toàn màn hình khi thêm vào Home Screen -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Flash Sale — Tuấn Anh Điếu Cày</title>
   <link rel="icon" href="img/logo.jpg"/>
