--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <!-- Viewport chuẩn iOS, cho phép zoom của người dùng -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <!-- (tuỳ chọn) Trải nghiệm web-app toàn màn hình khi thêm vào Home Screen -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <title>Tuấn Anh Điếu Cày — Cửa hàng điếu cày & thuốc lào</title>
   <meta name="description" content="Điếu cày & thuốc lào chất lượng. Giá tốt, giao nhanh. Đặt hàng & hỗ trợ Zalo.">
   <link rel="icon" href="img/logo.jpg"/>
