--- a/flash-sale.html
+++ b/flash-sale.html
@@ -2,16 +2,28 @@
 <html lang="vi">
 <head>
   <meta charset="utf-8"/>
-  <!-- Viewport chuẩn iOS, cho phép zoom của người dùng -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <!-- (tuỳ chọn) Trải nghiệm web-app toàn màn hình khi thêm vào Home Screen -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=yes">
+  <meta name="format-detection" content="telephone=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Flash Sale — Tuấn Anh Điếu Cày</title>
+<!-- Viewport chuẩn iOS, cho phép zoom của người dùng -->
+<!-- (tuỳ chọn) Trải nghiệm web-app toàn màn hình khi thêm vào Home Screen -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+<title>Flash Sale — Tuấn Anh Điếu Cày</title>
   <link rel="icon" href="img/logo.jpg"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap"/>
   <link rel="stylesheet" href="assets/style.css"/>
+<style>
+  /* iOS Safari scaling & safe-area tweaks */
+  html { -webkit-text-size-adjust: 100%; }
+  body { min-height: 100dvh; }
+  img, video { max-width: 100%; height: auto; }
+  /* Prevent zoom on inputs by keeping font-size >= 16px */
+  input, select, textarea { font-size: 16px; }
+  /* Respect iPhone safe areas for full-bleed headers/footers if any */
+  :root { padding-top: env(safe-area-inset-top); padding-right: env(safe-area-inset-right); padding-bottom: env(safe-area-inset-bottom); padding-left: env(safe-area-inset-left); }
+</style>
 </head>
 <body>
 <header class="header">
