--- a/index.html
+++ b/index.html
@@ -44,6 +44,52 @@
   /* Respect iPhone safe areas for full-bleed headers/footers if any */
   :root { padding-top: env(safe-area-inset-top); padding-right: env(safe-area-inset-right); padding-bottom: env(safe-area-inset-bottom); padding-left: env(safe-area-inset-left); }
 </style>
+
+<style>
+  /* iOS Safari: make buttons scale responsively */
+  .btn {
+    -webkit-appearance: none;
+    appearance: none;
+    font-size: clamp(14px, 3.2vw, 16px);
+    line-height: 1.2;
+    padding: clamp(6px, 1.8vw, 10px) clamp(10px, 3.5vw, 16px);
+    border-radius: 10px;
+  }
+  .icon-btn {
+    -webkit-appearance: none;
+    appearance: none;
+    font-size: clamp(18px, 4.8vw, 22px);
+    width: clamp(28px, 8vw, 36px);
+    height: clamp(28px, 8vw, 36px);
+    line-height: 1;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+  }
+  .badge {
+    font-size: clamp(10px, 2.5vw, 12px);
+    padding: clamp(2px, 0.8vw, 4px) clamp(6px, 1.6vw, 8px);
+    border-radius: 999px;
+  }
+  .tabs button {
+    font-size: clamp(13px, 3.4vw, 15px);
+    padding: clamp(6px, 1.8vw, 10px) clamp(10px, 3vw, 14px);
+  }
+  /* Header actions wrap nicely on small screens */
+  @media (max-width: 420px) {
+    .header__cta {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+    }
+  }
+  /* Prevent layout jump due to safe areas */
+  @supports (padding: max(0px)) {
+    body { padding-bottom: max(0px, env(safe-area-inset-bottom)); }
+  }
+</style>
+
 </head>
 <body>
 <header class="header">
