--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
-<!-- Viewport chuẩn iOS, cho phép zoom của người dùng -->
-<!-- (tuỳ chọn) Trải nghiệm web-app toàn màn hình khi thêm vào Home Screen -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <title>Tuấn Anh Điếu Cày — Cửa hàng điếu cày & thuốc lào</title>
   <meta name="description" content="Điếu cày & thuốc lào chất lượng. Giá tốt, giao nhanh. Đặt hàng & hỗ trợ Zalo.">
   <link rel="icon" href="img/logo.jpg"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap"/>
   <link rel="stylesheet" href="assets/style.css"/>
   <style>
-    /* Auth modal */
     .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.5);z-index:60}
     .modal.open{display:flex}
     .modal__panel{background:#fff;border-radius:14px;box-shadow:0 10px 40px rgba(0,0,0,.35);width:100%;max-width:520px}
@@ -25,142 +20,16 @@
     .tabs{display:flex;gap:6px;background:#f1f5f9;border-radius:10px;padding:6px;margin-bottom:12px}
     .tabs button{flex:1;border:0;background:transparent;padding:8px 10px;border-radius:8px;cursor:pointer;font-weight:700}
     .tabs button.active{background:#fff;border:1px solid #e5e7eb}
-
-    /* Admin panel */
-    .admin{margin-top:22px}
-    .admin .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
-    .table{width:100%;border-collapse:collapse}
-    .table th,.table td{border:1px solid #e5e7eb;padding:8px;text-align:left}
-    .muted.small{font-size:12px;color:#64748b}
-    @media(max-width:900px){.admin .grid{grid-template-columns:1fr}}
   </style>
-<style>
-  /* iOS Safari scaling & safe-area tweaks */
-  html { -webkit-text-size-adjust: 100%; }
-  body { min-height: 100dvh; }
-  img, video { max-width: 100%; height: auto; }
-  /* Prevent zoom on inputs by keeping font-size >= 16px */
-  input, select, textarea { font-size: 16px; }
-  /* Respect iPhone safe areas for full-bleed headers/footers if any */
-  :root { padding-top: env(safe-area-inset-top); padding-right: env(safe-area-inset-right); padding-bottom: env(safe-area-inset-bottom); padding-left: env(safe-area-inset-left); }
-</style>
-
-<style>
-  /* iOS Safari: make buttons scale responsively */
-  .btn {
-    -webkit-appearance: none;
-    appearance: none;
-    font-size: clamp(14px, 3.2vw, 16px);
-    line-height: 1.2;
-    padding: clamp(6px, 1.8vw, 10px) clamp(10px, 3.5vw, 16px);
-    border-radius: 10px;
-  }
-  .icon-btn {
-    -webkit-appearance: none;
-    appearance: none;
-    font-size: clamp(18px, 4.8vw, 22px);
-    width: clamp(28px, 8vw, 36px);
-    height: clamp(28px, 8vw, 36px);
-    line-height: 1;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 8px;
-  }
-  .badge {
-    font-size: clamp(10px, 2.5vw, 12px);
-    padding: clamp(2px, 0.8vw, 4px) clamp(6px, 1.6vw, 8px);
-    border-radius: 999px;
-  }
-  .tabs button {
-    font-size: clamp(13px, 3.4vw, 15px);
-    padding: clamp(6px, 1.8vw, 10px) clamp(10px, 3vw, 14px);
-  }
-  /* Header actions wrap nicely on small screens */
-  @media (max-width: 420px) {
-    .header__cta {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-    }
-  }
-  /* Prevent layout jump due to safe areas */
-  @supports (padding: max(0px)) {
-    body { padding-bottom: max(0px, env(safe-area-inset-bottom)); }
-  }
-</style>
-<style>
-  /* === iOS Safari small-screen wrap fixes === */
-  /* 1) Make header CTA container wrap safely without clipping children */
-  .header__cta {
-    overflow: visible;
-  }
-  /* 2) Prevent flex children from clipping their own content on iOS */
-  .header__cta > * { min-width: 0; }
-  /* 3) Let button text wrap instead of being cut off */
-  .btn {
-    white-space: normal;
-    line-height: 1.3;
-    word-break: break-word;
-    -webkit-hyphens: auto;
-    hyphens: auto;
-  }
-  /* 4) On very narrow screens, stack the actions full-width for stability */
-  @media (max-width: 420px) {
-    .header__cta {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-    }
-    .header__cta > * {
-      flex: 1 1 100%;
-      min-width: 0;
-    }
-    /* Make buttons more tappable and avoid truncation */
-    .btn {
-      width: 100%;
-      justify-content: center;
-      padding: clamp(8px, 2.2vw, 12px) clamp(12px, 4vw, 18px);
-    }
-    /* Icon-only buttons should not stretch */
-    .icon-btn {
-      flex: 0 0 auto;
-      width: clamp(28px, 8vw, 36px);
-      height: clamp(28px, 8vw, 36px);
-    }
-  }
-  /* 5) Utility: ensure any text container inside buttons can wrap */
-  .btn > span, .btn > strong, .btn > em { white-space: normal; }
-</style>
-
-
-
-<style>
-  /* iOS Safari: wrap-friendly buttons without text cut-off */
-  .header__cta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-  }
-  .header__cta .btn, .header__cta button {
-    white-space: normal !important;
-    word-break: break-word;
-    min-width: auto;
-    flex: 1 1 auto;
-    max-width: 100%;
-    text-align: center;
-  }
-  /* Prevent icon + text overlap */
-  .header__cta .btn i, .header__cta button i {
-    margin-right: 4px;
-  }
-  /* Ensure font-size adjusts but never below 14px */
-  .header__cta .btn, .header__cta button {
-    font-size: clamp(14px, 3.5vw, 16px);
-    padding: clamp(6px, 2vw, 10px) clamp(10px, 3vw, 14px);
-  }
-</style>
-
+  <script>
+    // Detect iOS Safari and add class to <html> for horizontal product scrolling
+    (function(){
+      const ua = navigator.userAgent;
+      const iOS = /iPad|iPhone|iPod/.test(ua);
+      const isSafari = /^((?!chrome|android).)*safari/i.test(ua);
+      if (iOS && isSafari) document.documentElement.classList.add('is-ios-safari');
+    })();
+  </script>
 </head>
 <body>
 <header class="header">
@@ -195,7 +64,6 @@
   </div>
 </section>
 
-<!-- Ví tiền người dùng (hiện khi đã đăng nhập) -->
 <section class="section" id="wallet" style="display:none">
   <div class="container">
     <div class="section__head">
@@ -217,7 +85,16 @@
       <h2>Sản phẩm</h2>
       <span class="muted">Bấm ảnh hoặc “Mua ngay” để thêm vào giỏ</span>
     </div>
-    <div class="products"><!-- được render từ Firestore --></div>
+
+    <!-- Category tabs -->
+    <div class="category-tabs" id="categoryTabs">
+      <button data-cat="all" class="active">Tất cả</button>
+      <button data-cat="dieucay">Điếu cày</button>
+      <button data-cat="thuoclao">Thuốc lào</button>
+      <button data-cat="phukien">Phụ kiện khác</button>
+    </div>
+
+    <div class="products"><!-- render từ Firestore --></div>
   </div>
 </section>
 
@@ -228,7 +105,6 @@
   </div>
 </section>
 
-<!-- KHU VỰC QUẢN TRỊ (chỉ hiện khi role=admin) -->
 <section class="section" id="adminPanel" style="display:none">
   <div class="container">
     <div class="section__head">
@@ -236,14 +112,12 @@
       <span class="muted">Chỉ dành cho quản trị viên</span>
     </div>
 
-    <!-- Tabs -->
     <div class="tabs" style="margin-bottom:10px">
       <button data-tab="#tabProducts" class="active">Sản phẩm</button>
       <button data-tab="#tabUsers">Người dùng</button>
       <button data-tab="#tabOrders">Đơn hàng</button>
     </div>
 
-    <!-- Tab: Products -->
     <div id="tabProducts" class="admin">
       <h3>Thêm / Sửa sản phẩm</h3>
       <div class="grid">
@@ -251,6 +125,13 @@
         <label>Giá hiện tại (VND)<input id="ad_price" type="number" min="0" step="1000"></label>
         <label>Giá gạch (tuỳ chọn)<input id="ad_original_price" type="number" min="0" step="1000"></label>
         <label>Ảnh (URL)<input id="ad_image" type="url" placeholder="https://..."></label>
+        <label>Loại sản phẩm
+          <select id="ad_category">
+            <option value="dieucay">Điếu cày</option>
+            <option value="thuoclao">Thuốc lào</option>
+            <option value="phukien">Phụ kiện khác</option>
+          </select>
+        </label>
         <label style="display:flex;gap:8px;align-items:center"><input id="ad_is_sale" type="checkbox"> Flash Sale</label>
         <input id="ad_docId" type="hidden">
         <div>
@@ -261,12 +142,11 @@
 
       <h3 style="margin-top:14px">Danh sách</h3>
       <table class="table">
-        <thead><tr><th>Tên</th><th>Giá</th><th>Giá gạch</th><th>Flash</th><th>Ảnh</th><th>Hành động</th></tr></thead>
+        <thead><tr><th>Tên</th><th>Giá</th><th>Giá gạch</th><th>Flash</th><th>Loại</th><th>Ảnh</th><th>Hành động</th></tr></thead>
         <tbody id="ad_rows"></tbody>
       </table>
     </div>
 
-    <!-- Tab: Users -->
     <div id="tabUsers" class="admin" style="display:none">
       <h3>Người dùng</h3>
       <table class="table">
@@ -276,7 +156,6 @@
       <p class="muted small">Gợi ý: dùng “Nạp/Rút” để điều chỉnh số dư. Chỉ admin mới được phép thay đổi role và số dư.</p>
     </div>
 
-    <!-- Tab: Orders -->
     <div id="tabOrders" class="admin" style="display:none">
       <h3>Đơn hàng</h3>
       <table class="table">
@@ -297,7 +176,6 @@
   </div>
 </footer>
 
-<!-- Cart Drawer -->
 <div class="drawer" id="cartDrawer">
   <div class="drawer__overlay" id="closeCart"></div>
   <div class="drawer__panel">
@@ -310,7 +188,6 @@
   </div>
 </div>
 
-<!-- Nút nổi -->
 <a class="phone-fab" href="tel:+84905695949" aria-label="Gọi điện" target="_blank" rel="noopener"><img src="img/phone.png" alt="Gọi điện"/></a>
 <a class="facebook-fab" href="https://www.facebook.com/dailythuoclao43" aria-label="Facebook" target="_blank" rel="noopener"><img src="img/facebook.png" alt="Facebook"/></a>
 <a class="zalo-fab" href="https://zalo.me/0905695949" aria-label="Chat Zalo" target="_blank" rel="noopener"><img src="img/Zalo_logo.jpg" alt="Zalo"/></a>
@@ -321,7 +198,7 @@
 <script type="module" src="assets/shop.js"></script>
 <script type="module" src="assets/admin.js"></script>
 <script>
-  // Tabs in admin
+  // Admin tabs
   document.addEventListener('click', (e)=>{
     const btn = e.target.closest('.tabs button');
     if(!btn) return;
@@ -332,10 +209,20 @@
       const el = document.querySelector(sel); if (el) el.style.display = (sel===id)?'block':'none';
     });
   });
+
+  // Category tabs -> call renderProducts
+  document.addEventListener('click', (e)=>{
+    const b = e.target.closest('#categoryTabs button');
+    if (!b) return;
+    document.querySelectorAll('#categoryTabs button').forEach(x=>x.classList.remove('active'));
+    b.classList.add('active');
+    const cat = b.getAttribute('data-cat') || 'all';
+    if (window.renderProducts) window.renderProducts({ container: '#products .products', category: cat });
+  });
 </script>
 <script type="module" src="assets/topup.js"></script>
 
-<!-- Auth Modal (added) -->
+<!-- Auth Modal -->
 <div class="modal" id="authModal">
   <div class="modal__panel">
     <div class="modal__head">
@@ -348,7 +235,6 @@
         <button data-tab="#tabSignup">Đăng ký</button>
       </div>
 
-      <!-- Tab: Đăng nhập -->
       <div id="tabLogin">
         <form id="formLogin" class="form-grid">
           <label>Email
@@ -361,7 +247,6 @@
         </form>
       </div>
 
-      <!-- Tab: Đăng ký -->
       <div id="tabSignup" style="display:none">
         <form id="formSignup" class="form-grid">
           <label>Họ và tên
@@ -370,15 +255,12 @@
           <label>Email
             <input name="email" type="email" required placeholder="you@email.com">
           </label>
-
-          <!-- 2 trường mới -->
           <label>Số điện thoại
             <input name="phone" type="tel" required placeholder="VD: 0905 123 456">
           </label>
           <label>Địa chỉ
             <input name="address" required placeholder="VD: 09 Tiên Sơn 10, Hải Châu, Đà Nẵng">
           </label>
-
           <label>Mật khẩu
             <input name="password" type="password" required placeholder="••••••••">
           </label>
@@ -390,16 +272,14 @@
 </div>
 
 <script>
-  // Mở modal khi bấm nút "Đăng nhập"
+  // Open/close auth modal + tab switching
   document.getElementById('btnAccount')?.addEventListener('click', ()=>{
     if (window.__SIGNED_IN) return;
     document.getElementById('authModal')?.classList.add('open');
   });
-  // Đóng modal
   document.getElementById('closeAuth')?.addEventListener('click', ()=>{
     document.getElementById('authModal')?.classList.remove('open');
   });
-  // Tabs
   document.addEventListener('click', (e)=>{
     const btn = e.target.closest('.tabs button'); if(!btn) return;
     document.querySelectorAll('.tabs button').forEach(b=>b.classList.remove('active'));
@@ -409,7 +289,6 @@
     document.querySelector('#tabSignup').style.display = (id === '#tabSignup') ? 'block' : 'none';
   });
 </script>
-
 
 <script type="module" src="assets/auth.js"></script>
 </body>
